feat: add endpoint get /user/admin to show user attribut, hide some attribut to simple user
